--- a/index.html
+++ b/index.html
@@ -91,27 +91,27 @@
         var audio = new Audio();
         document.addEventListener("keydown", function (e) {
             if (e.keyCode == 66) {
-                audio.src = 'audio/b.mp3';
+                audio.src = 'audio/B.mp3';
                 p.textContent = arr[1];
                 audio.play();
             }
             else if (e.keyCode == 67) {
-                audio.src = 'audio/c.mp3';
+                audio.src = 'audio/C.mp3';
                 p.textContent = arr[2];
                 audio.play()
             }
             else if (e.keyCode == 68) {
-                audio.src = 'audio/d.mp3';
+                audio.src = 'audio/D.mp3';
                 p.textContent = arr[3];
                 audio.play()
             }
             else if (e.keyCode == 69) {
-                audio.src = 'audio/e.mp3';
+                audio.src = 'audio/E.mp3';
                 p.textContent = arr[4];
                 audio.play()
             }
             else if (e.keyCode == 70) {
-                audio.src = 'audio/f.mp3';
+                audio.src = 'audio/F.mp3';
                 p.textContent = arr[5];
                 audio.play()
             }
